Bug 1683217 - Require non-zero window size for profiler screenshots in WebRender r=mstange

Differential Revision: https://phabricator.services.mozilla.com/D101685